[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "json"] }
